    to solve problems with savannah themes. I also made the necessary changes
    in savannah styles
  * [Soon-Son] fixed bug # 148 (malformed part on dns.zone)
  * [Soon-Son] fixed bug # 431 (Number of public forum/msg are 0)
  * [Soon-Son] removed all links to nonexistent document
  * [Soon-Son] more i18n effort including patch # 283
  * [Soon-Son] removed dtd definition for bug # 120

 -- Christian Bayle <bayle@debian.org>  Mon,  6 May 2002 00:09:25 +0200

sourceforge (2.6-0+11) unstable; urgency=low

  * [Roland] Fixed theme registration for 2.6->2.6 upgrades.  You might
    encounter problems if you registered them manually, in this case
    simply run the following SQL in the sourceforge database:
    DELETE FROM themes WHERE dirname LIKE 'savannah_%'; BUG #124 CLOSED
  * [Christian] changed Layout.class with div align=center BUG #120 CLOSED
  * [Christian] removed link to docman BUG #122 CLOSED
  * [Christian] $sys_name is now used for imported savannah themes
    BUG #129 CLOSED
  * [Christian/Roland] added darkslate savannah theme

 -- Christian Bayle <bayle@debian.org>  Thu, 25 Apr 2002 17:15:57 +0200

sourceforge (2.6-0+10) unstable; urgency=low

  * [Christian] Corrected wrong link in menu.php for lastlogin.php.
  * [Roland] *Lots* of patches from Olafur Osvaldsson <oli@isnic.is>
    applied, many thanks to him.
  * [Roland] Changed about.php page so that it now speaks about Debian
    Sourceforge.  It's internationalised, too.
  * [Roland] Page footer is now shorter, internationalised, and pointing
    to the About page.
  * [Roland] Fixed links in the Site News page.
  * [Roland] Made groups siteadmin and newsadmin public to prevent
    problems with submitting of news.  Also, changed their names for
    coherence with names inherited from the 2.5 branch.
  * [Christian] Continuing work on theming, added a new function in
    html.php (url_html)
  * [Roland] Removed a few bashisms in maintainer scripts.